--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,16 @@
   --font-family: "Encode Sans Expanded", sans-serif;
   --rating-color: #ffc908;
 }
+.network {
+  position: fixed;
+  padding: 10px;
+  font-weight: bold;
+  background-color: #dadada;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99999;
+  box-shadow: var(--shadow);
+}
 .border-main {
   border: solid 1px var(--main-color) !important;
 }
