--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,1 +1,8 @@
-.Footer {}
+.Footer {
+  background-color: black;
+  padding: 30px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
+}
